--- a/index.html
+++ b/index.html
@@ -2,31 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Cyber Lab</title>
+  <title>general.technology</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
     body {
-      font-family: sans-serif;
-      background-color: #111;
-      color: #eee;
+      margin: 0;
+      padding: 0;
+      background-color: #0e0e0e;
+      color: #f0f0f0;
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
-      padding: 50px;
     }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5em;
+    }
+
+    p {
+      font-size: 1.25rem;
+      margin-bottom: 2em;
+      color: #ccc;
+    }
+
     a {
-      color: #00ffff;
+      color: #00ffe0;
       text-decoration: none;
-      display: block;
-      margin: 10px 0;
+      font-weight: 500;
+      margin: 0.5em 0;
+      transition: color 0.2s ease;
+    }
+
+    a:hover {
+      color: #ffffff;
+    }
+
+    footer {
+      margin-top: 3em;
+      font-size: 0.9rem;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <h1>My Cyber Lab</h1>
-  <p>Experimenting with security, infrastructure, and ideas.</p>
+  <h1>general.technology</h1>
+  <p>Exploring security, infrastructure, and internet experiments.</p>
 
-  <a href="https://portal.yourdomain.com">Portal</a>
+  <a href="https://portal.general.technology">Portal</a>
   <a href="https://github.com/yourusername">GitHub</a>
-  <a href="mailto:you@yourdomain.com">Contact Me</a>
+  <a href="mailto:you@general.technology">Contact</a>
 
-  <p style="margin-top: 40px;">More coming soon.</p>
+  <footer>More coming soon.</footer>
 </body>
 </html>
