--- a/index.html
+++ b/index.html
@@ -7,58 +7,36 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-    body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
       background-color: #0e0e0e;
-      color: #f0f0f0;
+      overflow: hidden;
       font-family: 'Inter', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
     }
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5em;
+    .centered-logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
-    p {
-      font-size: 1.25rem;
-      margin-bottom: 2em;
-      color: #ccc;
-    }
-
-    a {
-      color: #00ffe0;
-      text-decoration: none;
-      font-weight: 500;
-      margin: 0.5em 0;
-      transition: color 0.2s ease;
-    }
-
-    a:hover {
-      color: #ffffff;
-    }
-
-    footer {
-      margin-top: 3em;
-      font-size: 0.9rem;
-      color: #555;
+    .centered-logo img {
+      max-width: 80vw;
+      max-height: 80vh;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <h1>general.technology</h1>
-  <p>Exploring security, infrastructure, and internet experiments.</p>
-
-  <a href="https://portal.general.technology">Portal</a>
-  <a href="https://github.com/yourusername">GitHub</a>
-  <a href="mailto:you@general.technology">Contact</a>
-
-  <footer>More coming soon.</footer>
+  <div class="centered-logo">
+    <img src="IMG_3550.jpg" alt="General Technology Logo">
+  </div>
 </body>
 </html>
