--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     html, body {
       height: 100%;
-      background-color: #0e0e0e;
+      background-color: #000000;
       overflow: hidden;
       font-family: 'Inter', sans-serif;
     }
