Add Supabase URL - leaderboard now fully configured

--- a/snake.html
+++ b/snake.html
@@ -360,7 +360,7 @@
     // Using Supabase for persistent server-side storage (free tier)
     // NOTE: The anon key is SAFE to expose - it's designed for client-side use
     // If GitHub flags it, you can allow it (it's a false positive)
-    const SUPABASE_URL = 'YOUR_SUPABASE_URL'; // e.g., 'https://xxxxx.supabase.co' - REPLACE THIS!
+    const SUPABASE_URL = 'https://bmnixnmqferqlcxublii.supabase.co';
     const SUPABASE_ANON_KEY = 'sb_publishable_IidrOPKjc9tkqOwjJMhrrQ_z35awXmc'; // Public anon key (safe to expose in client code)
     
     let useSupabase = false;
