--- a/snake.html
+++ b/snake.html
@@ -79,6 +79,18 @@
       font-size: clamp(18px, 4vw, 24px);
       margin-bottom: 15px;
     }
+    #version {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      color: rgba(255, 255, 255, 0.5);
+      font-size: clamp(12px, 2vw, 16px);
+      font-weight: normal;
+      z-index: 10;
+      padding: 5px 10px;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
+    }
     
     /* Mobile-specific adjustments */
     @media (max-width: 768px) {
@@ -185,6 +197,7 @@
 </head>
 <body>
   <div id="score">Score: 0 / 50</div>
+  <div id="version">v1.0</div>
   <div id="gameOverlay">
     <h2 id="overlayTitle">Game Over!</h2>
     <p id="overlayMessage">You hit the wall!</p>
