Use actual head radius for wall collision so snake visually touches wall - v1.0.2

--- a/snake.html
+++ b/snake.html
@@ -197,7 +197,7 @@
 </head>
 <body>
   <div id="score">Score: 0 / 50</div>
-  <div id="version">v1.0.1</div>
+  <div id="version">v1.0.2</div>
   <div id="gameOverlay">
     <h2 id="overlayTitle">Game Over!</h2>
     <p id="overlayMessage">You hit the wall!</p>
@@ -790,7 +790,8 @@
       snakeHeadGroup.position.addScaledVector(forward, snakeSpeed * deltaTime);
 
       // Check wall collision (end game if outside bounds) - make it get much closer to wall
-      const headRadius = 0.05; // Extremely small so snake gets very close to wall before hitting
+      // Using actual head radius (1.0) so collision happens when head visually touches wall
+      const headRadius = 1.0;
       
       if (snakeHeadGroup.position.x <= -arenaSize + headRadius || 
           snakeHeadGroup.position.x >= arenaSize - headRadius ||
