--- a/index.html
+++ b/index.html
@@ -14,137 +14,29 @@
     }
 
     html, body {
-      min-height: 100vh;
-      background: #000000;
+      height: 100%;
+      background-color: #000000;
+      overflow: hidden;
       font-family: 'Inter', sans-serif;
-      color: #ffffff;
-      overflow-x: hidden;
     }
 
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 40px 20px;
+    .centered-logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
-    .logo-section {
-      text-align: center;
-      margin-bottom: 60px;
-    }
-
-    .logo-container {
-      display: inline-block;
-      position: relative;
-      margin: 0 auto;
-      max-width: 500px;
-    }
-
-    .logo-container img {
-      width: 100%;
-      height: auto;
+    .centered-logo img {
+      max-width: 80vw;
+      max-height: 80vh;
       display: block;
-    }
-
-    .launchpad-title {
-      text-align: center;
-      font-size: 2.5em;
-      font-weight: 700;
-      margin-bottom: 50px;
-      color: #ffffff;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .apps-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-    }
-
-    .app-card {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      padding: 30px;
-      text-align: center;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      border: 2px solid transparent;
-      backdrop-filter: blur(10px);
-      width: 150px;
-      height: 150px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .app-card:hover {
-      transform: translateY(-10px);
-      background: rgba(255, 255, 255, 0.2);
-      border-color: rgba(255, 255, 255, 0.3);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    }
-
-    .app-card:active {
-      transform: translateY(-5px);
-    }
-
-    .app-icon {
-      font-size: 4em;
-      display: block;
-    }
-
-    .app-name {
-      font-size: 1.3em;
-      font-weight: 700;
-      margin-bottom: 8px;
-    }
-
-    .app-description {
-      font-size: 0.9em;
-      color: rgba(255, 255, 255, 0.7);
-    }
-
-    @media (max-width: 768px) {
-      .apps-grid {
-        gap: 20px;
-      }
-      
-      .app-card {
-        width: 120px;
-        height: 120px;
-        padding: 20px;
-      }
-      
-      .app-icon {
-        font-size: 3em;
-      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo-section">
-      <div class="logo-container">
-        <img src="IMG_3550.jpg" alt="General Technology">
-      </div>
-    </div>
-
-    <div class="apps-grid">
-      <a href="snake.html" class="app-card" style="text-decoration: none; color: inherit;">
-        <span class="app-icon">🐍</span>
-      </a>
-
-      <!-- More apps can be added here -->
-      <!-- 
-      <a href="app2.html" class="app-card" style="text-decoration: none; color: inherit;">
-        <span class="app-icon">📱</span>
-        <div class="app-name">App Name</div>
-        <div class="app-description">Description</div>
-      </a>
-      -->
-    </div>
+  <div class="centered-logo">
+    <img src="IMG_3550.jpg" alt="General Technology Logo">
   </div>
 </body>
 </html>
