--- a/snake.html
+++ b/snake.html
@@ -197,7 +197,7 @@
 </head>
 <body>
   <div id="score">Score: 0 / 50</div>
-  <div id="version">v1.0.4</div>
+  <div id="version">v1.0.5</div>
   <div id="gameOverlay">
     <h2 id="overlayTitle">Game Over!</h2>
     <p id="overlayMessage">You hit the wall!</p>
@@ -238,8 +238,8 @@
     dirLight.position.set(10, 20, 10);
     scene.add(dirLight);
 
-    // Ground
-    const groundGeo = new THREE.PlaneGeometry(200, 200);
+    // Ground - size should match arena boundaries (arenaSize * 2)
+    const groundGeo = new THREE.PlaneGeometry(arenaSize * 2, arenaSize * 2);
     const groundMat = new THREE.MeshStandardMaterial({ color: 0x55aa55 });
     const ground = new THREE.Mesh(groundGeo, groundMat);
     ground.rotation.x = -Math.PI / 2;
@@ -790,8 +790,8 @@
       snakeHeadGroup.position.addScaledVector(forward, snakeSpeed * deltaTime);
 
       // Check wall collision (end game if outside bounds) - make it get much closer to wall
-      // Very small value so head gets extremely close to wall before collision
-      const headRadius = 0.05; // Head gets very close to wall, almost touching
+      // Zero radius means head center must cross wall boundary before collision
+      const headRadius = 0; // Head must actually cross wall boundary
       
       if (snakeHeadGroup.position.x <= -arenaSize + headRadius || 
           snakeHeadGroup.position.x >= arenaSize - headRadius ||
