--- a/index.html
+++ b/index.html
@@ -45,15 +45,6 @@
       display: block;
     }
 
-    .launchpad-title {
-      text-align: center;
-      font-size: 2.5em;
-      font-weight: 700;
-      margin-bottom: 50px;
-      color: #ffffff;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    }
-
     .apps-grid {
       display: flex;
       flex-wrap: wrap;
@@ -90,20 +81,20 @@
       transform: translateY(-5px);
     }
 
+    .app-card.disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .app-card.disabled:hover {
+      transform: none;
+      background: rgba(255, 255, 255, 0.1);
+      border-color: transparent;
+    }
+
     .app-icon {
       font-size: 4em;
       display: block;
-    }
-
-    .app-name {
-      font-size: 1.3em;
-      font-weight: 700;
-      margin-bottom: 8px;
-    }
-
-    .app-description {
-      font-size: 0.9em;
-      color: rgba(255, 255, 255, 0.7);
     }
 
     @media (max-width: 768px) {
@@ -136,14 +127,13 @@
         <span class="app-icon">🐍</span>
       </a>
 
-      <!-- More apps can be added here -->
-      <!-- 
-      <a href="app2.html" class="app-card" style="text-decoration: none; color: inherit;">
+      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
         <span class="app-icon">📱</span>
-        <div class="app-name">App Name</div>
-        <div class="app-description">Description</div>
-      </a>
-      -->
+      </div>
+
+      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">🎮</span>
+      </div>
     </div>
   </div>
 </body>
