--- a/launchpad.html
+++ b/launchpad.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>general.technology</title>
+  <title>general.technology - Launchpad</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
@@ -25,33 +25,11 @@
       max-width: 1200px;
       margin: 0 auto;
       padding: 40px 20px;
-    }
-
-    .logo-section {
-      text-align: center;
-      margin-bottom: 60px;
-    }
-
-    .logo-container {
-      display: inline-block;
-      position: relative;
-      margin: 0 auto;
-      max-width: 500px;
-    }
-
-    .logo-container img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .launchpad-title {
-      text-align: center;
-      font-size: 2.5em;
-      font-weight: 700;
-      margin-bottom: 50px;
-      color: #ffffff;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
 
     .apps-grid {
@@ -90,20 +68,20 @@
       transform: translateY(-5px);
     }
 
+    .app-card.disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .app-card.disabled:hover {
+      transform: none;
+      background: rgba(255, 255, 255, 0.1);
+      border-color: transparent;
+    }
+
     .app-icon {
       font-size: 4em;
       display: block;
-    }
-
-    .app-name {
-      font-size: 1.3em;
-      font-weight: 700;
-      margin-bottom: 8px;
-    }
-
-    .app-description {
-      font-size: 0.9em;
-      color: rgba(255, 255, 255, 0.7);
     }
 
     @media (max-width: 768px) {
@@ -125,25 +103,18 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo-section">
-      <div class="logo-container">
-        <img src="IMG_3550.jpg" alt="General Technology">
-      </div>
-    </div>
-
     <div class="apps-grid">
       <a href="snake.html" class="app-card" style="text-decoration: none; color: inherit;">
         <span class="app-icon">🐍</span>
       </a>
 
-      <!-- More apps can be added here -->
-      <!-- 
-      <a href="app2.html" class="app-card" style="text-decoration: none; color: inherit;">
+      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
         <span class="app-icon">📱</span>
-        <div class="app-name">App Name</div>
-        <div class="app-description">Description</div>
-      </a>
-      -->
+      </div>
+
+      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">🎮</span>
+      </div>
     </div>
   </div>
 </body>
