Adjust hotspot position to better center over O in TECHNOLOGY

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     /* Clickable hotspot over the O in TECHNOLOGY */
     .o-hotspot {
       position: absolute;
-      /* Positioned over the O in TECHNOLOGY - adjust these values based on your image */
-      /* The O is in the bottom line "TECHNOLOGY", last letter, so it's on the right side */
-      bottom: 20%;
-      right: 8%;
-      width: 4%;
-      height: 5%;
+      /* Positioned over the O in TECHNOLOGY - the O is the second-to-last letter */
+      /* Adjusting to be more centered over the O */
+      bottom: 25%;
+      right: 12%;
+      width: 3.5%;
+      height: 4.5%;
       border-radius: 50%;
       cursor: pointer;
       z-index: 10;
