Make hotspot invisible - only clickable, subtle hover effect

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       border-radius: 50%;
       cursor: pointer;
       z-index: 10;
-      /* Make it visible for debugging - remove background to make invisible */
-      background: rgba(255, 0, 0, 0.3);
+      /* Invisible but clickable */
+      background: transparent;
       display: block;
     }
 
     .o-hotspot:hover {
-      /* Optional: add a subtle glow effect on hover */
-      background: rgba(255, 0, 0, 0.5);
+      /* Subtle indication on hover */
+      background: rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
