Add homophone game to launchpad with icon

--- a/launchpad.html
+++ b/launchpad.html
@@ -108,8 +108,9 @@
         <span class="app-icon">🐍</span>
       </a>
 
-      <div class="app-card disabled" style="text-decoration: none; color: inherit;">
-      </div>
+      <a href="homophone-game.html" class="app-card" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">📝</span>
+      </a>
 
       <div class="app-card disabled" style="text-decoration: none; color: inherit;">
       </div>
