--- a/homophone-game.html
+++ b/homophone-game.html
@@ -503,7 +503,8 @@ renderStats();
 async function getHighScores() {
   if (useSupabase) {
     try {
-      const response = await fetch(`${SUPABASE_URL}/rest/v1/${LEADERBOARD_TABLE}?select=name,score,date,duration,accuracy&order=score.desc&limit=10`, {
+      // Fetch more than 10 to allow for client-side normalization sorting
+      const response = await fetch(`${SUPABASE_URL}/rest/v1/${LEADERBOARD_TABLE}?select=name,score,date,duration,accuracy&order=score.desc&limit=50`, {
         method: 'GET',
         headers: {
           'apikey': SUPABASE_ANON_KEY,
